opensearch/opster/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster
  namespace: opensearch-operator
spec:
  ports:
    - name: https
      port: 9200
      protocol: TCP
      targetPort: 9200
  selector:
    opster.io/opensearch-cluster: akarx-cluster
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster
  namespace: opensearch-operator
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx-ingress
  # tls:
  #   - hosts:
  #       - os.cluster
  #     secretName: ingress-cert
  rules:
    - host: os.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akarx-cluster
                port:
                  number: 9200
